feat-UPD-29d10: Added force update feature

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d9
-====================
+Текущая версия V29d10
+=====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
@@ -23,6 +23,9 @@
 [+] Антибашинг: Добавлена возможность настройки системы антибашинга на страницу
     настроек сервера
 [+] Мировые константы: Добавлена информация о текущих настройках антибашинга
+[+] Обновление: Добавлена возможность форсировать обновление в случае проблем с
+    автоматическим   обновлением.    Возможность    доступна    в    интерфейсе
+    Администратора, пункт меню "Утилиты"
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
