--- a/docs/install.txt
+++ b/docs/install.txt
@@ -145,6 +145,22 @@ innodb_log_buffer_size          8388608
 надо изменить названия таблиц перед заливкой файла /docs/supernova.sql !
 
 
+Краткий ликбез по GIT
+=====================
+Создать локальную копию Сверхновой в текущем  каталоге  (не  забываем  точку  в
+конце!):
+  git clone git://github.com/supernova-ws/SuperNova.git .
+В текущем каталоге появится самая свежая  копия  Сверхновой  из  ветки  master.
+Теперь  содержимое  нужно  скопировать  в  корневой  каталог  сервера.  Вообще,
+рекомендуется  делать  это  сразу  на  сервере  -  для  избежания   проблем   с
+копированием (был уже такой случай). Но не у всех хостеры  разрешают  запускать
+локально программы, поэтому можно сначала сделать  копию  на  локальном  диске.
+Собственно, больше ничего не надо :) Впрочем, если вы занимаетесь модификациями
+движка, вам пригодится следуюшая команда. Откатить все изменения, сделанные  на
+локальной копии:
+  git reset --hard
+
+
 Обновление до последней версии
 ==============================
 0. ВНИМАНИЕ!!! ПЕРЕД ОБНОВЛЕНИЕМ СДЕЛАЙТЕ РЕЗЕРВНУЮ КОПИЮ БАЗЫ ДАННЫХ И  ФАЙЛОВ
@@ -173,9 +189,8 @@ innodb_log_buffer_size          8388608
    (Администратор -> Настройки, снять  галочку  "Отключить  игру"  и  сохранить
    изменения).
 
-
 Апгрейд с RR
-============
+------------
 Автоматический апгрейд с баз RR в  разработке.  Частично  апгрейд  производится
 автоматически запуском файла update.php
 
@@ -193,21 +208,21 @@ url.rewrite-once = (
   "^/scripts/createbanner.php(.*)" => "/banner.php$1"
 )
 
-
-Краткий ликбез по GIT
-=====================
-Создать локальную копию Сверхновой в текущем  каталоге  (не  забываем  точку  в
-конце!):
-  git clone git://github.com/supernova-ws/SuperNova.git .
-В текущем каталоге появится самая свежая  копия  Сверхновой  из  ветки  master.
-Теперь  содержимое  нужно  скопировать  в  корневой  каталог  сервера.  Вообще,
-рекомендуется  делать  это  сразу  на  сервере  -  для  избежания   проблем   с
-копированием (был уже такой случай). Но не у всех хостеры  разрешают  запускать
-локально программы, поэтому можно сначала сделать  копию  на  локальном  диске.
-Собственно, больше ничего не надо :) Впрочем, если вы занимаетесь модификациями
-движка, вам пригодится следуюшая команда. Откатить все изменения, сделанные  на
-локальной копии:
-  git reset --hard
+Если возникли проблемы с обновлением...
+---------------------------------------
+Невозможно предсказать заранее все возможные комбинации настроек PHP,  MySQL  и
+веб-сервера. СН ориентируется на "установки по умолчанию". Поэтому в  отдельных
+случаях  возможны  сбои  в  процедуре  обновления.   Алгоритм   автоматического
+обновления  рассчитан  на  однократный  запуск.  Однако  в   случае   некоторых
+конфигураций, в процессе обновления  происходят  ошибки.  Некоторые  из  них  -
+критичны, а некоторые можно исправить повторным запуском процедуры (с  или  без
+редактирования БД). Запустить процедуру  обновления  повторно  можно  используя
+пункт "Форсировать обновление" меню "Утилиты" на странице Администратора. Прошу
+обратить внимание! Использование форсированного  обновления  может  привести  к
+порче  БД  (в  случае,  если  само  обновление  закончилось   ранее   успешно)!
+Форсированное  обновление  нужно  использовать  только  в  том   случае,   если
+стандартная процедура обновления прошла неуспешно! Если  и  это  не  помогло  -
+следует перейти к Диагностиек неисправностей
 
 Диагностика неисправностей движка
 =================================
