misc-ECO-29d11: Reformated fleet&defense build page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d10
+Текущая версия V29d11
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -35,6 +35,8 @@
 [~] Обновление: Апдейтер использует собственные процедуры запросов к БД
 [~] Обновление:  Ускорен   автоапдейтер   при   повторном   запуске   на   уже
     сконвертированных таблицах
+
+[#] Верфь: Переверстан интерфейс Верфи и Обороны
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
