feat-UNI-29d12: Phalanx now using SN output facility (i.e. as in Planet Overview event table)

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d11
+Текущая версия V29d12
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -26,6 +26,7 @@
 [+] Обновление: Добавлена возможность форсировать обновление в случае проблем с
     автоматическим   обновлением.    Возможность    доступна    в    интерфейсе
     Администратора, пункт меню "Утилиты"
+[+] Фаланга: Переписан вывод фаланги с использованием функций СН
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
