doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -26,7 +26,8 @@
 [+] Обновление: Добавлена возможность форсировать обновление в случае проблем с
     автоматическим   обновлением.    Возможность    доступна    в    интерфейсе
     Администратора, пункт меню "Утилиты"
-[+] Фаланга: Переписан вывод фаланги с использованием функций СН
+[+] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
+    выглядит аналогично списку событий флота на странице "Обзор планеты"
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
