--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -37,6 +37,8 @@
 [~] Обновление: Апдейтер использует собственные процедуры запросов к БД
 [~] Обновление:  Ускорен   автоапдейтер   при   повторном   запуске   на   уже
     сконвертированных таблицах
+[~]  Настройки:  Включение  защиты  планет  от   атак   доступно   только   для
+     Администраторов во избежание злоупотреблений
 
 [#] Верфь: Переверстан интерфейс Верфи и Обороны
 
