misc-MSG-29d14: Now all automatic notifications on for new players

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d13
+Текущая версия V29d14
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -28,6 +28,8 @@
     Администратора, пункт меню "Утилиты"
 [+] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
     выглядит аналогично списку событий флота на странице "Обзор планеты"
+[+] Сообщения:  Теперь  настройки  автоматических  уведомлений   включены   по
+    умолчанию для новых игроков
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
@@ -48,6 +50,7 @@
     определенных настройках MySQL
 [%] SQL: Исправлена ошибка с индексами в таблице users
 [%] Обслуживание: Исправлена ошибка при обслуживании таблицы Альянсов
+[%] Локализация/Английский: Исправлены баги в локализации
 
 [@] Логи: Изменения темной материи  вынесены  из  глобального  лога в отдельную
     таблицу. Это  существенно  облегчило  поиск  неисправностей  на  сервере  и
