feat-INT-29d15: Planet overview and hangar ques now looks identical to building que

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d14
+Текущая версия V29d15
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -30,6 +30,13 @@
     выглядит аналогично списку событий флота на странице "Обзор планеты"
 [+] Сообщения:  Теперь  настройки  автоматических  уведомлений   включены   по
     умолчанию для новых игроков
+[+]  Верфь:  Переверстан  интерфейс  Верфи  и  Обороны.  Вид  очереди  построек
+    обновлен. Теперь они выглядят так же, как и очередь постройки зданий
+    Добавлена возможность удалить последний добавленный элемент из очереди
+    Кнопка "Построить" дублируется возле каждого юнита. Функционал  сохранен  -
+    по её нажатию будут построены все выбранные юниты
+[+] Обзор планеты: Вид очереди построек верфи  и  очереди  исследований  теперь
+    аналогичен очереди построек зданий
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
@@ -41,8 +48,6 @@
     сконвертированных таблицах
 [~]  Настройки:  Включение  защиты  планет  от   атак   доступно   только   для
      Администраторов во избежание злоупотреблений
-
-[#] Верфь: Переверстан интерфейс Верфи и Обороны
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
@@ -58,6 +63,8 @@
     таблицу
 [@] БД: Все существующие таблицы сконвертированы в UTF8
 [@] БД: Все существующие таблицы переведены на InnoDB
+[@] sn_timer: Таймер корректно работает с очередью, в которой количество юнитов
+    больше 1
 
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
