feat-UNI+FLT-26d16: Phalanx algorythm reworked. Spying level now has effect on information on incoming alien fleets

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d15
+Текущая версия V29d16
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -26,8 +26,6 @@
 [+] Обновление: Добавлена возможность форсировать обновление в случае проблем с
     автоматическим   обновлением.    Возможность    доступна    в    интерфейсе
     Администратора, пункт меню "Утилиты"
-[+] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
-    выглядит аналогично списку событий флота на странице "Обзор планеты"
 [+] Сообщения:  Теперь  настройки  автоматических  уведомлений   включены   по
     умолчанию для новых игроков
 [+]  Верфь:  Переверстан  интерфейс  Верфи  и  Обороны.  Вид  очереди  построек
@@ -37,6 +35,29 @@
     по её нажатию будут построены все выбранные юниты
 [+] Обзор планеты: Вид очереди построек верфи  и  очереди  исследований  теперь
     аналогичен очереди построек зданий
+[+] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
+    выглядит аналогично списку  событий  флота  на  странице  "Обзор  планеты".
+    Алгоритм работы - почти оффовский: 
+    1. Показываются все флоты, летящие от сканируемой планеты или же к ней
+    2. Полет A --> B
+       a) скан B => можно увидеть время прибытия флота
+       b) скан A => можно увидеть время возвращения флота (но не  его  прибытия
+       на B) 
+    3. Возвращение B --> A
+       a) скан B => не видно ничего
+       b) скан A => виден возвращающийся флот
+    4. Особый случай: задание "Передислокация" A --> B
+       a) флот виден только на B, но не на A
+       b) после отзыва флот нигде не виден
+    5. Полнота информации о флотах зависит от уровня шпионажа (см. ниже)
+[+] Обзор планеты/Фаланга: На  количество  отображаемой  информации  о  летящих
+    чужих флотах влияет эффективный уровень шпионажа (технология+наемник):
+    Меньше 4 - нет информации о летящем флоте
+    4 и выше - видно общее количество кораблей во флоте и везет ли флот ресурсы
+    6 и выше - виден качественный состав флота - т.е. сколько групп кораблей во
+    флоте и сколько кораблей в каждой группе
+    8 и выше - видно точное количество ресурсов в трюмах кораблей
+    10 и выше - виден количественный состав флота
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
