doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,13 +12,16 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d16
+Текущая версия V29d17
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
     "Разрешить  пересылку  ЛС  на  email".  После  этого  в  настройках  игрока
     появляются дополнительные опции для всех категорий входящих сообщений
+[!] Админка: С нуля создан интерфейс редактирования юнитов/ресурсов на  планете
+    - пункт меню  "Редактировать"  в  разделе  "Планета".  Он  доступен  членам
+    команды начиная с Оператора (authlevel=2) и выше
 
 [+] Антибашинг: Добавлена возможность настройки системы антибашинга на страницу
     настроек сервера
