misc-SYS: Reordered ships

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -70,8 +70,10 @@
 [~] Обновление: Апдейтер использует собственные процедуры запросов к БД
 [~] Обновление:  Ускорен   автоапдейтер   при   повторном   запуске   на   уже
     сконвертированных таблицах
-[~]  Настройки:  Включение  защиты  планет  от   атак   доступно   только   для
-     Администраторов во избежание злоупотреблений
+[~] Настройки:  Включение  защиты  планет   от   атак   доступно   только   для
+    Администраторов во избежание злоупотреблений
+[~] Флоты: Переупорядочен список кораблей
+[~] Новапедия: Отредактировано короткое описание большого транспорта
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
