misc-MRC: On mercenary maxlevel levels also prints

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -74,6 +74,7 @@
     Администраторов во избежание злоупотреблений
 [~] Флоты: Переупорядочен список кораблей
 [~] Новапедия: Отредактировано короткое описание большого транспорта
+[~] Офицеры: Уровень офицеров указывается и при максимальном уровне
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
