feat-MSG-29d19: Delete all messages of one category from message class page. Hint on message class page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d18
+Текущая версия V29d19
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -31,7 +31,7 @@
     Администратора, пункт меню "Утилиты"
 [+] Сообщения:  Теперь  настройки  автоматических  уведомлений   включены   по
     умолчанию для новых игроков
-[+]  Верфь:  Переверстан  интерфейс  Верфи  и  Обороны.  Вид  очереди  построек
+[+] Верфь:  Переверстан  интерфейс   Верфи  и  Обороны.  Вид  очереди  построек
     обновлен. Теперь они выглядят так же, как и очередь постройки зданий
     Добавлена возможность удалить последний добавленный элемент из очереди
     Кнопка "Построить" дублируется возле каждого юнита. Функционал  сохранен  -
@@ -61,6 +61,11 @@
     флоте и сколько кораблей в каждой группе
     8 и выше - видно точное количество ресурсов в трюмах кораблей
     10 и выше - виден количественный состав флота
+[+] Сообщения:  Изменена  цветовая  кодировка  сообщений.  
+    Категории  сообщений переупорядочены
+    Добавлена  возможность  очистить  сообщения  определенной   категории,   не
+    открывая их - на случай переполнения  почтового ящика
+    Добавлена подсказка
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
@@ -92,6 +97,7 @@
 [@] БД: Все существующие таблицы переведены на InnoDB
 [@] sn_timer: Таймер корректно работает с очередью, в которой количество юнитов
     больше 1
+[@] Сообщения: Переработаны файлы локализации
 
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
