feat-INT-29d21: Reworked Research interface

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,13 +12,28 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d19
+Текущая версия V29d21
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
     "Разрешить  пересылку  ЛС  на  email".  После  этого  в  настройках  игрока
     появляются дополнительные опции для всех категорий входящих сообщений
+[!] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
+    выглядит аналогично списку  событий  флота  на  странице  "Обзор  планеты".
+    Алгоритм работы - почти оффовский: 
+    1. Показываются все флоты, летящие от сканируемой планеты или же к ней
+    2. Полет A --> B
+       a) скан B => можно увидеть время прибытия флота
+       b) скан A => можно увидеть время возвращения флота (но не  его  прибытия
+       на B) 
+    3. Возвращение B --> A
+       a) скан B => не видно ничего
+       b) скан A => виден возвращающийся флот
+    4. Особый случай: задание "Передислокация" A --> B
+       a) флот виден только на B, но не на A
+       b) после отзыва флот нигде не виден
+    5. Полнота информации о флотах зависит от уровня шпионажа (см. ниже)
 [!] Админка: С нуля создан интерфейс редактирования юнитов/ресурсов на  планете
     - пункт меню  "Редактировать"  в  разделе  "Планета".  Он  доступен  членам
     команды начиная с Оператора (authlevel=2) и выше
@@ -38,21 +53,6 @@
     по её нажатию будут построены все выбранные юниты
 [+] Обзор планеты: Вид очереди построек верфи  и  очереди  исследований  теперь
     аналогичен очереди построек зданий
-[+] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
-    выглядит аналогично списку  событий  флота  на  странице  "Обзор  планеты".
-    Алгоритм работы - почти оффовский: 
-    1. Показываются все флоты, летящие от сканируемой планеты или же к ней
-    2. Полет A --> B
-       a) скан B => можно увидеть время прибытия флота
-       b) скан A => можно увидеть время возвращения флота (но не  его  прибытия
-       на B) 
-    3. Возвращение B --> A
-       a) скан B => не видно ничего
-       b) скан A => виден возвращающийся флот
-    4. Особый случай: задание "Передислокация" A --> B
-       a) флот виден только на B, но не на A
-       b) после отзыва флот нигде не виден
-    5. Полнота информации о флотах зависит от уровня шпионажа (см. ниже)
 [+] Обзор планеты/Фаланга: На  количество  отображаемой  информации  о  летящих
     чужих флотах влияет эффективный уровень шпионажа (технология+наемник):
     Меньше 4 - нет информации о летящем флоте
@@ -66,6 +66,11 @@
     Добавлена  возможность  очистить  сообщения  определенной   категории,   не
     открывая их - на случай переполнения  почтового ящика
     Добавлена подсказка
+[+] Админка/Список планет: "Список планет", "Список лун" и  "Активные  планеты"
+    используют один и тот же код и шаблон. Список планет теперь показывает  тип
+    планеты, хозяина планеты (имя и ИД), а для лун - родительскую планету и  её
+    ИД
+[+] Исследования: Переработан интерфейс страницы исследований
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
@@ -80,6 +85,10 @@
 [~] Флоты: Переупорядочен список кораблей
 [~] Новапедия: Отредактировано короткое описание большого транспорта
 [~] Офицеры: Уровень офицеров указывается и при максимальном уровне
+[~] Админка/Бан: По умолчанию включена галочка РО и выставлен срок бана в 3 дня
+    Бан и разбан объединены в один пункт меню и на одну страницу интерфейса
+[~] Админка/Меню: Объединены разделы "Планета" и "Луна" в раздел "Вселенная"
+    Под названием сервера добавлены часы серверного времени
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
