feat-INT-29d21: Research now using PTL and sn_timer

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -37,6 +37,8 @@
 [!] Админка: С нуля создан интерфейс редактирования юнитов/ресурсов на  планете
     - пункт меню  "Редактировать"  в  разделе  "Планета".  Он  доступен  членам
     команды начиная с Оператора (authlevel=2) и выше
+[!] Исследования: Переработан интерфейс страницы исследований. Используется PTL
+    и sn_timer
 
 [+] Антибашинг: Добавлена возможность настройки системы антибашинга на страницу
     настроек сервера
@@ -70,7 +72,6 @@
     используют один и тот же код и шаблон. Список планет теперь показывает  тип
     планеты, хозяина планеты (имя и ИД), а для лун - родительскую планету и  её
     ИД
-[+] Исследования: Переработан интерфейс страницы исследований
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
