feat-INT-29d22: Laboratory interface fully rewrote. Que now uses standart interface. Research completion handles every page refresh - not only when entering Laboratory

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d21
+Текущая версия V29d22
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -37,8 +37,10 @@
 [!] Админка: С нуля создан интерфейс редактирования юнитов/ресурсов на  планете
     - пункт меню  "Редактировать"  в  разделе  "Планета".  Он  доступен  членам
     команды начиная с Оператора (authlevel=2) и выше
-[!] Исследования: Переработан интерфейс страницы исследований. Используется PTL
-    и sn_timer
+[!] Исследования: Полностью переписан интерфейс Лаборатории
+    Очередь исследований приведена к стандартному виду
+    Обработка очереди исследований теперь производится  при  каждом  обновлении
+    страницы, а не только при входе в интерфейс Лаборатории
 
 [+] Антибашинг: Добавлена возможность настройки системы антибашинга на страницу
     настроек сервера
