feat-CHT-29d23: Links to battlereport converted to hrefs. For securities reason only links on current server are valid

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d22
+Текущая версия V29d23
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -74,6 +74,9 @@
     используют один и тот же код и шаблон. Список планет теперь показывает  тип
     планеты, хозяина планеты (имя и ИД), а для лун - родительскую планету и  её
     ИД
+[+] Чат:  Боевые  отчеты  теперь  преобразуются  в  ссылки.   Из   соображений
+    безопасности работают только ссылки на текущем сервере. По клику на  ссылку
+    боевой отчет открывается в новом окне
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
