feat-COE-29d24: Anti-small-fleet-intelegence system. New generation procedure for battle report messages. Fixed bug in moon creation

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d23
+Текущая версия V29d24
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -41,6 +41,9 @@
     Очередь исследований приведена к стандартному виду
     Обработка очереди исследований теперь производится  при  каждом  обновлении
     страницы, а не только при входе в интерфейс Лаборатории
+[!] АнтиРМФ: Если флот атакующего уничтожен за один раунд, то:
+      1. Атакующий не получает отчета о бое
+      2. Флоты, находящиеся в удержании так и остаются на орбите
 
 [+] Антибашинг: Добавлена возможность настройки системы антибашинга на страницу
     настроек сервера
@@ -77,6 +80,21 @@
 [+] Чат:  Боевые  отчеты  теперь  преобразуются  в  ссылки.   Из   соображений
     безопасности работают только ссылки на текущем сервере. По клику на  ссылку
     боевой отчет открывается в новом окне
+[+] Сообщения: Изменена процедура  генерации  писем  с  уведомлением  о  боевом
+    отчете следующим образом:
+      1. Если бой  закончился  за  один  раунд  проигрышем  атакующего,  то  он
+         получает сообщение о том, что связь с флотом прервалась и не  получает
+         никакой дополнительной информации (включая ссылку на боевой отчет)
+      2. Теперь все участники боя (включая членов  САБа  и  хозяинов  флотов  в
+         удержании) получают одинаковые письма (кроме случая, описанного в п.1)
+      3. Уведомление о бое всегда содержит потери атакующих  и  оброняющихся  и
+         сведения о поле обломков
+      4. Сведения о вывозе ресурсов с планеты добавляются в  отчет  только  при
+         выигрыше атакующих
+      5. Уведомления теперь корректно окрашиваются  для  всех  участников  боя:
+         красным, если участник проиграл, зеленым - если выиграл, оранжевым - в
+         случае ничьи
+      6. Все числа в уведомлении теперь форматируются
 
 [~] Отладка: Теперь при отключенной  глобальной  отладке  не  генерируется  лог
     запросов
@@ -95,9 +113,13 @@
     Бан и разбан объединены в один пункт меню и на одну страницу интерфейса
 [~] Админка/Меню: Объединены разделы "Планета" и "Луна" в раздел "Вселенная"
     Под названием сервера добавлены часы серверного времени
+[~] Боевой отчет: Если в результате боя появилась луна, то в отчет  пишется  её
+    имя, а не имя планеты, на орбите которой она была создана
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
+[%] Вселенная: Исправлена ошибка создания луны - теперь при создании луны  поле
+    астероидов на планете корректно уничтожается
 [%] Настройки:  Исправлена  ошибка  сохранения   настроек,   возникающая   при
     определенных настройках MySQL
 [%] SQL: Исправлена ошибка с индексами в таблице users
