misc-UNI: When moon creating not all debris destroyed - only amount that goes to moon

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -115,11 +115,11 @@
     Под названием сервера добавлены часы серверного времени
 [~] Боевой отчет: Если в результате боя появилась луна, то в отчет  пишется  её
     имя, а не имя планеты, на орбите которой она была создана
+[~] Вселенная:  Теперь  при  создании  луны  с  орбиты  списывается  количество
+    обломков, из которых сформировалась луна
 
 [%] Вселенная:  Исправлена  ошибка  создания  новой  планеты  при  регистрации,
     возникающая при определенных настройках MySQL
-[%] Вселенная: Исправлена ошибка создания луны - теперь при создании луны  поле
-    астероидов на планете корректно уничтожается
 [%] Настройки:  Исправлена  ошибка  сохранения   настроек,   возникающая   при
     определенных настройках MySQL
 [%] SQL: Исправлена ошибка с индексами в таблице users
