misc-SYS-29d25: Versioning

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз V29.1
 =====================
 
-Текущая версия V29d24
+Текущая версия V29d25
 =====================
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
@@ -135,6 +135,9 @@
 [@] sn_timer: Таймер корректно работает с очередью, в которой количество юнитов
     больше 1
 [@] Сообщения: Переработаны файлы локализации
+[@] Общие: Устаревшая функция SYS_mysqlSmartEscape заменена на соответствующие
+[@] Общие: Устаревшие массивы  $pricelist,  $resources,  $reslist,  $sn_groups,
+    $CombatCaps заменены в коде на $sn_data 
 
 
 Project "SuperNova.WS" Release 29 "Quest messaging"
