feat-SYS-30c0 Release 30 RC0

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,11 +9,11 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V29.1
-=====================
+Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF" RC0
+=========================================================================
 
-Текущая версия V29d25
-=====================
+Текущая версия V30c0
+--------------------
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
