doc: readme and changelog editing

--- a/README
+++ b/README
@@ -36,6 +36,13 @@ in /docs/todo.txt (Russian)
 Web-resources
 =============
 
+Main Hub For Your SuperNova Experience
+--------------------------------------
+Russian Version
+  http://supernova.ws/index.htm
+English Version
+  http://supernova.ws/index-en.htm
+
 GitHub
 ------
 You encouraged to use GitHub as main source for SN releases and builds
