doc: readme and changelog editing

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+We Want YOU!
+~~~~~~~~~~~~
+SuperNova need YOU! We need maintainers  for  localizations.  Any  language  is
+fine! Currently we need maintainer for English locale to check and  fix  it  as
+base for other non-Russian speaker users!
+
 Project "SuperNova.WS"
 ~~~~~~~~~~~~~~~~~~~~~~
 "SuperNova.WS" (shortly SN) is  a  massive  multiplayer  online  browser  space
