--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF" RC0
-=========================================================================
+Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
+=====================================================================
 
-Текущая версия V30c0
+Текущая версия V30d0
 --------------------
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
