fix-FLT-30d1: Fixed error on mysql servers with STRICT_TRANS_TABLES when sending fleet to Colonization or Exploration missions

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,11 +9,13 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
+Текущая версия V30d1
+--------------------
+
+[%] Отправка флотов: Исправлена ошибка на mySQL серверах со STRICT_TRANS_TABLES
+
 Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
 =====================================================================
-
-Текущая версия V30d0
---------------------
 
 [!] Сообщения:  Добавлена  возможность  пересылки  личных  сообщений  на  емейл
     игрока. Возможность включается администратором сервера в настройках - опция
