feat-LNG-30d2: Allowed language selection on pre-login pages

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,15 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V30d1
+Текущая версия V30d2
 --------------------
 
+[!]  Локализация:  Доступен  выбор  языка  до  входа  в  игру:   на   страницах
+регистрации, логина, восстановления забытого пароля
+
 [%] Отправка флотов: Исправлена ошибка на mySQL серверах со STRICT_TRANS_TABLES
+[%] Сообщения:  Исправлена  ошибка  отправки  сообщений  от  системы  на  mySQL
+    серверах со STRICT_TRANS_TABLES
 
 Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
 =====================================================================
