--- a/docs/install.txt
+++ b/docs/install.txt
@@ -36,7 +36,7 @@ PHP & XCache & веб-серверов! Это означает,  что  при  некоторых  комбинациях  и
 
 Требования
 ==========
-MySQL 5.x
+MySQL 5.x - режим STRICT_TRANS_TABLES должен быть ОТКЛЮЧЕН
 PHP >= 5.2.х
 Web-server
 XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
@@ -83,7 +83,9 @@ CentOS + lighttpd + XCache.
 
 Инсталляция, настройки БД
 =========================
-ВНИМАНИЕ! Почти все таблицы СН хранятся в формате InnoDB! По умолчанию MySQL НЕ
+ВНИМАНИЕ! Режим STRICT_TRANS_TABLES (переменная sql_mode) должен быть ОТКЛЮЧЕН!
+
+ВНИМАНИЕ! Все таблицы СН хранятся в  формате  InnoDB!  По  умолчанию  MySQL  НЕ
 НАСТРОЕН на нормальную работу с базами InnoDB! Дефолтных настроек MySQL  хватит
 на работу до 50 пользователей онлайн. Если  вы  планируете  большее  количество
 одновременных игроков, то вам нужно настроить  MySQL  в  соответствии  с  вашим
@@ -98,6 +100,12 @@ innodb_flush_method             O_DIRECT
 innodb_log_buffer_size          8388608
 
 Особо обращаю внимания на переменную innodb_flush_log_at_trx_commit!
+
+Так же для облегчения восстановления после сбоев рекомендуется  хранить  каждую
+таблицу InnoDB в отдельном файле. Для этого  нужно  добавить  в  файл  настроек
+директиву
+
+innodb_file_per_table
 
 
 Инсталляция, настройки веб-сервера
@@ -143,6 +151,12 @@ innodb_log_buffer_size          8388608
 Все изменения - на ваш страх и риск
 ВНИМАНИЕ!!! Если был изменен префикс таблиц ('sn_' по  умолчанию),  то  так  же
 надо изменить названия таблиц перед заливкой файла /docs/supernova.sql !
+
+Несколько Вселенных на одном сервере
+------------------------------------
+СН поддерживает работу нескольких Вселенных на одном сервере. Разные  вселенные
+должны иметь несовпадающие префиксы в пределах одного  пространства  переменных
+xCache
 
 
 Краткий ликбез по GIT
