feat-LNG-30d3: Now selected on pre-login lang used for all anonymous-accessible pages and as default language for newly registered user

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,11 +9,14 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V30d2
+Текущая версия V30d3
 --------------------
 
-[!]  Локализация:  Доступен  выбор  языка  до  входа  в  игру:   на   страницах
-регистрации, логина, восстановления забытого пароля
+[!]  Локализация:  Доступен  выбор  языка  до  входа  в  игру   на   страницах
+регистрации, логина, восстановления забытого пароля. Все доступные до  входа  в
+игру  страницы  (включая  статистику,  банлист,  список  контактов,   настройки
+вселенной итд) используют  выбранный  при  регистрации  язык.  При  регистрации
+выбранный язык сохраняется в настройках пользователя
 
 [%] Отправка флотов: Исправлена ошибка на mySQL серверах со STRICT_TRANS_TABLES
 [%] Сообщения:  Исправлена  ошибка  отправки  сообщений  от  системы  на  mySQL
