doc: install.txt editing

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -141,6 +141,10 @@ innodb_file_per_table
 10. Настройте игру на странице /admin/settings.php
 11. Сверхновая готова к запуску!
 
+ВНИМАНИЕ! Лом с членов команды (auth_level>0) НЕ  ВЫПАДАЕТ!  Это  не  баг,  это
+сделано  специально   для   усиления   безопасности   сервера!   Для   игры   и
+администрирования нужно использовать РАЗНЫЕ аккаунты!
+
 
 Инсталляция, продвинутый вариант
 ================================
