doc: readme editing

--- a/README
+++ b/README
@@ -94,8 +94,8 @@ Support
 Forum (Russian and English):
   http://forum.supernova.ws/viewforum.php?f=73
 
-Live Universes
---------------
+Live Demo Universes
+-------------------
 SuperNova (x1):
   http://supernova.ws
 
@@ -120,6 +120,9 @@ User-level changelog (Russian):
 
 Installation instructions (Russian):
   /docs/install.txt
+Installation instructions (English, google-translated):
+  /docs/install-en.txt
+
 
 Documentation for developers & administrators (Russian):
   /docs/html/developer.html
