--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,6 +12,8 @@
 Текущая версия V30d3
 --------------------
 
+[!] Документация: Добавлен файл с английской версией  инструкции  по  установке
+    /docs/install-en.txt (google translated)
 [!]  Локализация:  Доступен  выбор  языка  до  входа  в  игру   на   страницах
 регистрации, логина, восстановления забытого пароля. Все доступные до  входа  в
 игру  страницы  (включая  статистику,  банлист,  список  контактов,   настройки
