fix-LNG-30d4: Fixed error loading non-default language

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V30d3
+Текущая версия V30d4
 --------------------
 
 [!] Документация: Добавлен файл с английской версией  инструкции  по  установке
@@ -23,6 +23,7 @@
 [%] Отправка флотов: Исправлена ошибка на mySQL серверах со STRICT_TRANS_TABLES
 [%] Сообщения:  Исправлена  ошибка  отправки  сообщений  от  системы  на  mySQL
     серверах со STRICT_TRANS_TABLES
+[%] Локализация: Исправлена ошибка загрузки не-дефолтного языка
 
 Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
 =====================================================================
