feat-INT-31a0: Planet lists building que now count down whole que - not only first building. Ship infopage show actual ship data in addition to base ones

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,28 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V30d4
+Текущая версия V31a0
 --------------------
+
+[+] Обзор  планеты/Обзор  Империи:  Таймер  очереди  строительства  зданий  под
+    иконкой планеты теперь переключается на  следующее  здание  в  очереди  при
+    окончании строительства текущего. Ранее таймер  показывал  только  прогресс
+    постройки первого здания в очереди
+[+] Инфо/Флот: Показываются текущие характеристики корабля (с учетом  наемников
+    и технологий) 
+
+[@] SYS: Устаревшие функции заменены актуальными аналогами:
+      int_buildCounter => tpl_parse_planet
+      GetTargetDistance, GetMissionDuration, GetFleetConsumption => 
+        flt_travel_data
+      GetShipConsumption, get_ship_speed => get_ship_data
+      GetFleetMaxSpeed => flt_fleet_speed
+[@] SYS: В описании структуры кораблей (vars.php) данные о двигателях  вынесены
+    в  отдельный  массив  'engine'.  Теперь  можно   указывать   неограниченное
+    количество двигателей для апгрейда корабля
+
+30d4
+----
 
 [!] Документация: Добавлен файл с английской версией  инструкции  по  установке
     /docs/install-en.txt (google translated)
