misc-UNI: Name of newly created moon now not so long

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -19,6 +19,8 @@
 [+] Инфо/Флот: Показываются текущие характеристики корабля (с учетом  наемников
     и технологий) 
 
+[~] Луна: Имя создаваемой луны теперь не такое длинное
+
 [@] SYS: Устаревшие функции заменены актуальными аналогами:
       int_buildCounter => tpl_parse_planet
       GetTargetDistance, GetMissionDuration, GetFleetConsumption => 
