--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,6 +21,9 @@
 
 [~] Луна: Имя создаваемой луны теперь не такое длинное
 
+[%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
+    при отправке флотов
+
 [@] SYS: Устаревшие функции заменены актуальными аналогами:
       int_buildCounter => tpl_parse_planet
       GetTargetDistance, GetMissionDuration, GetFleetConsumption => 
